# stdtype

./: .gitignore  CMakeLists.txt  README.md  build_standalone.sh  mlir_build.sh
cmake/: CMakePolicy.cmake  llvm.cmake  utils.cmake
docs/: design.md
include/: CMakeLists.txt
include/StdType/IR/: CMakeLists.txt  OpsBase.td  StdAttrdefs.td  StdInterfaces.td  StdOps.td  StdTypeDialect.h  StdTypeDialect.td  StdTypes.td
test/: CMakeLists.txt
