cmake_minimum_required(VERSION 3.20)
project(stdtype LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(STDTYPE_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
set(STDTYPE_LIB_DIR ${CMAKE_SOURCE_DIR}/lib)
set(STDTYPE_TOOLS_DIR ${CMAKE_SOURCE_DIR}/tools)

find_package(LLVM REQUIRED CONFIG)
find_package(MLIR REQUIRED CONFIG)
    

message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
message(STATUS "Found MLIR in: ${MLIR_DIR}")

include_directories(SYSTEM ${LLVM_INCLUDE_DIRS} ${MLIR_INCLUDE_DIRS})
link_directories(${LLVM_LIBRARY_DIRS} ${MLIR_LIBRARY_DIRS})

set(LLVM_ENABLE_RTTI ON CACHE BOOL "Enable RTTI for LLVM/MLIR")
set(LLVM_ENABLE_ASSERTIONS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

